tests/error/modifier_errors/unknown_modifier.py
from guppylang.decorator import guppy


@guppy
def test() -> None:
    with True:
        pass


test.compile()
